--- a/TrabajoPractico1/package.json
+++ b/TrabajoPractico1/package.json
@@ -11,9 +11,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "typescript": "^5.9.2"
-  },
-  "dependencies": {
+    "typescript": "^5.9.2",
     "@types/node": "^24.3.0"
   }
 }
