--- a/TrabajoPractico1/tsconfig.json
+++ b/TrabajoPractico1/tsconfig.json
@@ -108,7 +108,7 @@
    
                         /* Skip type checking all .d.ts files. */
   },
-  "include":["src", "../index.ts"],
+  "include": ["src"],
   "exclude": ["node_modules"]
  
 }
