--- a/TrabajoPractico2/package.json
+++ b/TrabajoPractico2/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "vitest -ui",
+    "test": "vitest",
     "build": "npx tsc --watch",
     "dev": "node --watch ./dist/index.js"
   },
@@ -13,11 +13,12 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.5.1",
+    "@vitest/ui": "^3.2.4",
     "typescript": "^5.9.2",
-    "vitest": "^3.2.4",
-    "@types/cors": "^2.8.19"
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "cors": "^2.8.5",
