--- a/Practico Ciberseguridad/WebApp-Seguridad-Prog4/backend/package.json
+++ b/Practico Ciberseguridad/WebApp-Seguridad-Prog4/backend/package.json
@@ -8,7 +8,11 @@
     "test": "jest --watchAll",
     "test:ci": "jest --ci",
     "test:coverage": "jest --coverage",
-    "test:security": "node test/run-security-tests.js"
+    "test:security": "node test/run-security-tests.js",
+    "test:uno": "npx jest 01-brute-force.test.js",
+    "test:dos": "npx jest 02-command-injection.test.js",
+    "test:tres": "npx jest 03-csrf-protection.test.js",
+    "test:siete": "npx jest 07-sql-injection.test.js"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -19,7 +23,8 @@
     "multer": "^1.4.5-lts.1",
     "body-parser": "^1.20.2",
     "express-session": "^1.17.3",
-    "svg-captcha": "^1.4.0"
+    "svg-captcha": "^1.4.0",
+    "node-cache": "^5.1.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
