--- a/Practico Ciberseguridad/WebApp-Seguridad-Prog4/backend/package.json
+++ b/Practico Ciberseguridad/WebApp-Seguridad-Prog4/backend/package.json
@@ -12,6 +12,7 @@
     "test:uno": "npx jest 01-brute-force.test.js",
     "test:dos": "npx jest 02-command-injection.test.js",
     "test:tres": "npx jest 03-csrf-protection.test.js",
+    "test:seis": "npx jest 06-insecure-captcha.test.js",
     "test:siete": "npx jest 07-sql-injection.test.js"
   },
   "dependencies": {
